# pi-strument

./: CMakeLists.txt
src/: RotaryEncoder.cpp  RotaryEncoder.h  analog_microphone.c  analog_microphone.h  config.h  main.c  main.cpp  pio_rotary_encoder.pio  sequencer.h  st7789.h
src/devices/: audio_data.c  audio_data.h  audio_pio.c  audio_pio.h  audio_pio.pio  hardware.cpp  hardware.h
src/devices/analogMicrophone/: analog_microphone.c  analog_microphone.h
src/devices/buttonMatrix/: buttonMatrix.cpp  buttonMatrix.h
src/devices/leds/: leds.cpp  leds.h
src/devices/rotaryEncoder/: rotaryEncoder.cpp  rotaryEncoder.h
src/devices/tftDisplay/: st7789.c
src/graphics/: colors.h  fonts.h  graphics.cpp  graphics.h  pixelfnt.h  pixelfnt_info.cpp  pixelfnt_map.cpp  sansserif.h  sansserif_info.cpp  sansserif_map.cpp
src/synth/: notes.h  samples.h  samples_raw.cpp  sequencer.cpp  sequencer.h  synth.cpp  synth.h
src/ui/: common.cpp  common.h  mainMenu.cpp  mainMenu.h  playMode.cpp  playMode.h  sequencerMode.cpp  sequencerMode.h
